--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -18,7 +18,7 @@
                     <ul class="list-group col-12" id="challenge-list">
                         {% for challenge in challenges|reverse %}
                             <li id="challenge-id{{ challenge.id }}" data-challenge="{{ challenge.id }}" class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2 draggable">
-                                <i class="fa fa-flag"></i> {{ challenge.name }}
+                                <span class="list-order-number">{{ loop.index }}</span> <i class="fa fa-flag"></i> {{ challenge.name }}
                             </li>
                         {% endfor %}
                     </ul>
