Add campus verification

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -128,7 +128,7 @@ ul {
 .btn-campus {
     border-radius: 1px;
     border-color: grey;
-    margin-left: 14rem;
+    margin-right: 24rem;
 }
 .row-campus {
     margin-left: 23rem;
