--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -23,8 +23,10 @@
 
                 <div class="row mgb-15">
                     <div class="col-6 col-md-4 text-white text-center">
-                        <small class="info-challenge-title">Type of challenge</small><br>
-                        {{ challengeOnTheWay.type }}</small>
+                        <small class="info-challenge-title">
+                            Type of challenge<br>
+                        {{ challengeOnTheWay.type }}
+                        </small>
                     </div>
 
                     <div class="col-6 col-md-4 difficulty text-center" id="challenge-difficulty">
