--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -81,9 +81,11 @@ table.adminusers tr td {
 .draggable:hover {
     cursor : move;
 }
+
 .list-group-item {
     transition: all 0.2s ease-in-out;
 }
+
 .list-group-item.spacer {
     border:none;
     opacity:0;
@@ -92,9 +94,14 @@ table.adminusers tr td {
     height:40px;
     animation:flashing-item 0.5s ease-in-out;
 }
+
 .list-order-number {
     color:var( --josh-red);
     margin-right:3px;
+}
+
+.challenge-difficulty {
+    font-size: 0.8rem;
 }
 
 .existing_challenge {
@@ -111,7 +118,7 @@ table.adminusers tr td {
 }
 
 .list-container {
-    height: 24rem;
+    height: 22rem;
 }
 
 .modal-contest {
