--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -63,7 +63,7 @@
                         </div>
                         <div class="row d-flex ">
                             <div class="form-group">
-                                <input type="hidden" id="order-of-challenges" value="" name="order-of-challenges">
+                                <input type="hidden" id="order-of-challenges" value="" name="orderOfChallenges">
                                 <button type="submit" name="saveContest" class="align-self-center btn btn-dark text-white">Save your contest <i class="fa fa-save"></i></button>
                                 <button type="button" name="deleteContest" class="align-self-center btn btn-danger text-white" data-toggle="modal" data-target="#confirmDeletion">Delete <i class="fa fa-trash"></i></button>
                             </div>
@@ -98,7 +98,7 @@
                     <div class="row list-container overflow-auto">
                         <ul class="list-group col-12 p-0" id="challenges-list">
                             {% for challenge in challenges|reverse %}
-                                <li id="toadd-{{ challenge.id }}" class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
+                                <li id="toadd-{{ challenge.id }}" class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2" data-name="{{ challenge.name }}">
                                     <i class="fa fa-flag"></i> {{ challenge.name }}
                                     <button type="button" data-target="toadd-{{ challenge.id }}" data-challenge="{{ challenge.id }}" class="btn btn-dark text-white rounded-sm p-0 pl-1 pr-1 challenge-adder float-right">Add</button>
                                 </li>
@@ -130,7 +130,7 @@
 {% block javascript %}
 <script src="/assets/js/dndrop.js"></script>
     <script>
-    let challenge = new DragAndDrop ();
+    let challenge = new DragAndDrop();
     challenge.init({
         instance           : 'challenge',
         draggableClassName : 'draggable',
