--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -82,6 +82,10 @@ table.adminusers tr td {
     cursor : move;
 }
 
+.mgr-7 {
+    margin-right:7px;
+}
+
 .list-group-item {
     transition: all 0.2s ease-in-out;
 }
