--- a/src/View/Components/_footer.html.twig
+++ b/src/View/Components/_footer.html.twig
@@ -1,33 +1,27 @@
 <footer class="page-footer">
 
     <div class="container">
-        <div class="row justify-content-center mt-4 mb-4">
-            <div class="align-self-center icons-footer">
-                    <!-- Facebook -->
-                    <a href="https://www.facebook.com/WildCodeSchool/" class="rs-icon">
-                        <img src="/assets/images/button/facebook.svg">
-                    </a>
-                    <!-- Twitter -->
-                    <a href="https://twitter.com/wildcodeschool" class="rs-icon">
-                        <img src="/assets/images/button/twitter.svg">
-                    </a>
-                    <!-- Linkedin -->
-                    <a href="https://www.linkedin.com/school/wild-codes-chool/" class="rs-icon">
-                        <img src="/assets/images/button/linkedin.svg">
-                    </a>
-                    <!-- Youtube -->
-                    <a href="https://www.youtube.com/channel/UCi99G_0QPx5sYsK8zdvQzfw" class="rs-icon">
-                        <img src="/assets/images/button/youtube.svg">
-                    </a>
-                    <!-- Github -->
-                    <a href="https://github.com/WildCodeSchool" class="rs-icon">
-                        <img src="/assets/images/button/github.svg">
-                    </a>
+        <div class="d-flex justify-content-center mt-4 mb-4">
 
-            </div>
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/WildCodeSchool/" target="_blank" class="icon icon-facebook"></a>
+
+            <!-- Twitter -->
+            <a href="https://twitter.com/wildcodeschool" target="_blank" class="icon icon-twitter"></a>
+
+            <!-- Linkedin -->
+            <a href="https://www.linkedin.com/school/wild-codes-chool/" target="_blank" class="icon icon-linkedin"></a>
+
+            <!-- Youtube -->
+            <a href="https://www.youtube.com/channel/UCi99G_0QPx5sYsK8zdvQzfw" target="_blank" class="icon icon-youtube"></a>
+
+            <!-- Github -->
+            <a href="https://github.com/WildCodeSchool" target="_blank" class="icon icon-github"></a>
+
         </div>
     </div>
 
-    <p class="text-center text-white">Project 2 PHP 2020 - <a href="https://wildcodeschool.com/" class="text-white">Wild Code School</a></p>
+    <p class="text-center text-white"><a href="https://wildcodeschool.com/" class="link-footer">Wild Code School</a>
+        - <a href="/joshua/about" class="link-footer">About Joshua</a></p>
 
 </footer>
