--- a/src/View/User/user_edit.html.twig
+++ b/src/View/User/user_edit.html.twig
@@ -6,7 +6,7 @@
                 <h1>You're about to edit your profile</h1>
             </div>
         </div>
-        <form method="POST" action="/user/edituser">
+        <form method="POST" action="">
             <div class="row">
                 <div class="col-12 align-self-center text-center">
                     <img src="https://avatars.githubusercontent.com/{{session.github}}" alt="avatar github" id="avatar" class="img-thumbnail rounded-circle" width="85">
