--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -27,7 +27,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <p>Are you sure ? This will be permanent. Make sure that display is on before going further.</p>
+                                    <p>Are you sure ? This will be permanent.</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
