--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono&family=VT323&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7e73db9c3d.js" crossorigin="anonymous"></script>
     {% block stylesheet %}{% endblock %}
 </head>
